# cargo-lens

./: Cargo.toml  README.md
.github/workflows/: ci.yml
cargo-lens/: Cargo.toml
cargo-lens/src/: actor.rs  app.rs  cargo_interface.rs  cg_check.rs  components.rs  debug.rs  diagnostics.rs  events.rs  main.rs  print_macros.rs  review_req_checklist.rs
cargo-lens/src/actor/: cargo.rs  input.rs
cargo-lens/src/components/: checklist.rs  diagnostic.rs  diagnostic_para.rs
cgl-debugger/: Cargo.toml  LICENSE-MIT  README.md
src/: main.rs
