[package]
name = "cargo-lens"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A repl utility to help write a review-request"
repository = "https://github.com/CargoLens/cargo-lens"
categories = ["gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
tui = "0.19.0"
