[package]
name = "cargo-lens"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A tool to inspect your rust-project at the meta-level. Sherlock Holmes Approved"
repository = "https://github.com/CargoLens/cargo-lens-ws/cargo-lens"
categories = ["gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
tui = "0.19.0"
libc = {version = "0.2.147", optional = true}
cargo_metadata = "0.15.4"
cfg-if = "1.0.0"

[dev-dependencies]
mockall = "0.11.4"

[features]
debug_socket = ["libc"]
